--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroller": "^1.2.6",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-infinite-scroller": "^1.2.3"
   }
 }
